# ferroscope

./: .env.example  .gitignore  BUGS.md  Cargo.toml  README.md  test_agent.py  test_agent_complex.py  test_agent_dual.py
demo/: loop_agent.py
mcp/: README.md  package-lock.json  package.json
mcp/src/: index.ts
src/: classifiers.rs  db.rs  loop_detector.rs  main.rs  proxy.rs  tui.rs
