[package]
name = "ferroscope"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferroscope"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
